src/test/ui/rfc-2008-non-exhaustive/uninhabited/match.stderr
error[E0004]: non-exhaustive patterns: type `UninhabitedEnum` is non-empty
  --> $DIR/match.rs:19:11
   |
LL |     match x {}
   |           ^
   |
   = note: the matched value is of type `UninhabitedEnum`, which is marked as non-exhaustive
help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: type `UninhabitedStruct` is non-empty
  --> $DIR/match.rs:23:11
   |
LL |     match x {}
   |           ^
   |
   = note: the matched value is of type `UninhabitedStruct`
help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: type `UninhabitedTupleStruct` is non-empty
  --> $DIR/match.rs:27:11
   |
LL |     match x {}
   |           ^
   |
   = note: the matched value is of type `UninhabitedTupleStruct`
help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: `Tuple(_)` and `Struct { .. }` not covered
  --> $DIR/match.rs:31:11
   |
LL |     match x {}
   |           ^ patterns `Tuple(_)` and `Struct { .. }` not covered
   |
  ::: $DIR/auxiliary/uninhabited.rs:17:23
   |
LL |     #[non_exhaustive] Tuple(!),
   |                       ----- not covered
LL |     #[non_exhaustive] Struct { x: ! }
   |                       ------ not covered
   |
   = note: the matched value is of type `UninhabitedVariants`
help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   |
LL ~     match x {
LL +         Tuple(_) | Struct { .. } => todo!(),
LL ~     }
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0004`.
